# biodivine-aeon-py

./: .gitignore  .releasenotes.yml  Cargo.toml  LICENSE  README.md  conda_env.yaml  dev-requirements.txt  pyproject.toml
.cargo/: .gitignore  config-macos-dev.toml
.github/workflows/: CI.yml  aeon.yml  build.yml  docs.yml  lib-bdd.yml  lib-param-bn.yml  test.yml
aeon/: Cargo.toml  README.md  pyproject.toml
aeon/src/: lib.rs
aeon/src/internal/: mod.rs
aeon/src/internal/scc/: _impl_behaviour.rs  _impl_class.rs  algo_effectively_constant.rs  algo_par_utils.rs  algo_symbolic_components.rs  algo_symbolic_reach.rs  mod.rs
aeon/src/internal/scc/algo_interleaved_transition_guided_reduction/: _impl_extended_component_process.rs  _impl_reachable_process.rs  _impl_scheduler.rs  mod.rs
aeon/src/internal/util/: functional.rs  index_type.rs  mod.rs
api-coverage/: README.md  algo-bdd-scc.0.3.1.api.txt  lib-bdd.0.5.11.api.txt  lib-bdd.0.5.13.api.txt  lib-bdd.0.5.21.api.txt  lib-bdd.0.5.22.api.txt  lib-bdd.0.5.8.api.txt  lib-bdd.0.5.9.api.txt  lib-bdd.0.6.2.api.txt  lib-bdd.api.txt  lib-bdd.md  lib-bdd.todo.txt  lib-hctl-model-checker.0.2.2.api.txt  lib-hctl-model-checker.0.3.0.api.txt  lib-hctl-model-checker.0.3.4.api.txt  lib-hctl-model-checker.md  lib-param-bn-remaining.txt  lib-param-bn.0.5.10.api.txt  lib-param-bn.0.5.11.api.txt  lib-param-bn.0.5.12.api.txt  lib-param-bn.0.5.13.api.txt  lib-param-bn.0.5.3.api.txt  lib-param-bn.0.5.9.api.txt  lib-param-bn.0.6.2.api.txt  lib-param-bn.0.7.0.api.txt  lib-param-bn.api.txt  lib-param-bn.md  lib-param-bn.todo.txt  lib-pbn-control.99f9da756c370daf5428b3d61ef76c24e7d8de5f.api.txt  lib-pbn-control.efacdb66f84d5d3849df2082c62e7585fc56eeee.api.txt  lib-pbn-control.md  llm_update_prompt.txt
biodivine_aeon/: __init__.py  __init__.pyi
conda/: bld.bat  build.sh  meta.yaml
docs/: biodivine_aeon.py  biodivine_aeon_2.py  biodivine_aeon_old.py
evaluation/: fixed_points.py  minimal_trap_spaces_new.py  percolation.py  percolation_new.py  reachability_bwd_new.py  reachability_fwd_new.py  report.py  report.txt  report2.txt  run.sh
example/: README.md  fixed-points-symbolic.csv  requirements.txt
example/algorithms_evaluation/: evaluation.ipynb  fixed_points.py  fixed_points_new.py  minimal_trap_spaces.py  minimal_trap_spaces_new.py  percolation.py  percolation_new.py  reachability_bwd.py  reachability_bwd_new.py  reachability_fwd.py  reachability_fwd_new.py  report.py  run.sh
example/case-study/butanol-production/: butanol-pathway-f1-f2-f3.aeon  butanol-pathway-f2-f3.aeon  butanol-pathway-repaired.sbml  main.ipynb
example/case-study/control/: main.ipynb  myeloid_3unknown.aeon  myeloid_witness.aeon  source_diagram.drawio
example/case-study/interferon-pathway/: interferon-pathway.sbml  main.ipynb
example/case-study/t-cell-signalling/: main.ipynb  t-lgl-p2.aeon  t-lgl-proliferation.aeon  t-lgl-survival.sbml
example/script/: adf_to_aeon.py  algorithms.py  attractors.py  attractors_and_fixed_points.py  bbm_api.py  bn_to_adf.py  fixed_points.py  fixed_points_test.py  minimal_trap_spaces.py  percolation.py  reachability.py  scc.py  stability_analysis.py  stable_phenotypes.py  uniform_random_sampling.py
example/workflow/: 00-binary-decision-diagrams.ipynb  00_manipulating-binary-decision-diagrams.ipynb  01-boolean-network-manipulation.ipynb  01-manipulating-boolean-networks.ipynb  02-network-file-formats.ipynb  02-symbolic-data-structures.ipynb  03-symbolic-data-structures.ipynb  XX-network-reductions.ipynb  bbm.ipynb  butanol-pathway.sbml  classification.ipynb  classification.py  comparing-partial-and-full-functions.ipynb  computing-attractors-with-reduction.ipynb  computing-attractors.ipynb  computing-fixed-points.ipynb  file-formats.ipynb  manipulating-binary-decision-diagrams.ipynb  manipulating-boolean-networks.ipynb  mapk-annotated.aeon  model-checking.ipynb
example/workflow/data/: g2a_p1026.aeon  random.bnet
examples/: .gitignore  README.md  fixed-points.ipynb
examples/case-study/butanol-production/: butanol-pathway-f2-f3.aeon  butanol-pathway-relaxed.aeon
lib-bdd/: Cargo.toml  README.md  build.rs  pyproject.toml
lib-bdd/src/: lib.rs
lib-param-bn/: Cargo.toml  README.md  build.rs  pyproject.toml
lib-param-bn/src/: lib.rs
macros/: Cargo.toml
macros/src/: derive_config.rs  derive_configurable.rs  lib.rs
manylinux-image/: Dockerfile  REAMDE.md
src/: lib.rs  main.rs  pyo3_utils.rs
src/bbm/: bbm_model.rs  biodivine_boolean_models.rs  filter_config.rs  mod.rs  sampling_utils.rs
src/bindings/: aeon.rs  mod.rs
src/bindings/algorithms/: README.md  _impl_pyerr.rs  cancellation.rs  cancellation_handler.rs  cancellation_tokens.rs  configurable.rs  debug_with_limit.rs  graph_representation.rs  macros.rs  mod.rs  reachability.rs  reachability_config.rs  reachability_error.rs  reachability_old.rs  reachibility_error.rs  token_python.rs
src/bindings/annotations/: mod.rs  network_regulation.rs  network_variable.rs  regulatory_graph.rs
src/bindings/bn_classifier/: class.rs  classification.rs  mod.rs
src/bindings/hctl_model_checker/: _impl_hctl_tree_node.rs  mod.rs
src/bindings/lib_bdd/: _impl_bdd.rs  _impl_bdd_iterator.rs  _impl_bdd_valuation.rs  _impl_bdd_variable.rs  _impl_bdd_variable_set.rs  _impl_bdd_variable_set_builder.rs  _impl_boolean_expression.rs  bdd.rs  bdd_pointer.rs  bdd_valuation.rs  bdd_variable.rs  bdd_variable_set.rs  bdd_variable_set_builder.rs  boolean_expression.rs  mod.rs  op_function.rs
src/bindings/lib_bdd_2/: bdd.rs  bdd_pointer.rs  bdd_valuation.rs  bdd_variable.rs  bdd_variable_set.rs  bdd_variable_set_builder.rs  boolean_expression.rs  mod.rs
src/bindings/lib_hctl_model_checker/: _impl_hctl_tree_node.rs  (+3 more)
src/internal/: mod.rs
tests/: model-1.aeon  model-2.aeon  model-3.aeon  model-with-annotations.aeon  model-with-properties.aeon  small-bma-model.json  test_algorithms.py  test_annotations.py  test_bbm.py  test_bdd_module.py  test_bma.py  test_classification.py  test_control_module.py  test_hctl_model_checker.py  test_other.py  test_param_bn_0_6_2.py  test_param_bn_module.py
(+175 files in other folders)
