[package]
name = "biodivine-aeon-py"
version = "1.2.5"
edition = "2024"

[lib]
name = "biodivine_aeon"
crate-type = ["cdylib", "rlib"]

[features]
default = ['algorithms-pyo3-bindings']
# For releases, we want to include Z3 statically, so that users
# don't have to install it (or break compatibility with new versions).
# So for CI builds, this feature is enabled, but for local builds,
# you don't need it as long as you have Z3 installed (because your
# build may take >30min if you enable it).
static-z3 = ["z3/static-link-z3"]

# Feature flag that enables Python bindings for the algorithms module
algorithms-pyo3-bindings = []

[dependencies]
pyo3 = { version = "0.27", features = ["abi3-py37", "extension-module", "num-bigint", "py-clone"] }
biodivine-lib-param-bn = { version="0.6.2", features=["solver-z3"] }
biodivine-lib-bdd = "0.6.2"
#biodivine-pbn-control = "0.3.1"
biodivine-pbn-control = { git = "https://github.com/sybila/biodivine-pbn-control", rev = "efacdb66f84d5d3849df2082c62e7585fc56eeee" }
biodivine-hctl-model-checker = "0.3.4"
biodivine-lib-io-bma = "0.1.2"
# Cannot update `rand` because lib-bdd uses it to generate random big-int values.
rand = "0.8"
macros = { path = "macros" }
zip = "5.1.1"
num-bigint = "0.4"
num-traits = "0.2"
either = "1.15"
thiserror = "2.0"
log = "0.4"
dyn-clone = "1.0"
pyo3-log = "0.13"

# Include Z3 dependencies as strictly as possible, we don't want
# this to change because it might break our release builds.
# Cannot update `z3` because this version is used by lib-param-bn.
z3="^0.18.2"

[build-dependencies]
pyo3-build-config = "0.27"
