[package]
name = "biodivine-aeon-py"
version = "1.3.1"
edition = "2024"

[lib]
name = "biodivine_aeon"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[features]
default = ['algorithms-pyo3-bindings']

# Feature flag that enables Python bindings for the algorithms module
algorithms-pyo3-bindings = []

[dependencies]
macros = { path = "macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12"
pyo3 = { version = "0.27", features = ["abi3-py37", "extension-module", "num-bigint", "py-clone"] }
biodivine-lib-param-bn = { version="0.7.2", features=["serde"] }
biodivine-lib-bdd = { version = "0.6.2", features = ["serde"] }
#biodivine-pbn-control = "0.3.1"
biodivine-pbn-control = { git = "https://github.com/sybila/biodivine-pbn-control", rev = "9e31bab9d000266ea25c35cc752c69077973d43c" }
biodivine-hctl-model-checker = "0.3.5"
biodivine-lib-io-bma = "0.1.2"
biodivine-algo-bdd-scc = "0.3.2"
# Cannot update `rand` because lib-bdd uses it to generate random big-int values.
rand = "0.8"
cancel-this = { version = "0.4.0", features = ["pyo3"] }
computation-process = "0.2.0"
zip = "7.0"
num-bigint = "0.4"
num-traits = "0.2"
either = "1.15"
thiserror = "2.0"
log = "0.4"
dyn-clone = "1.0"
pyo3-log = "0.13"

[build-dependencies]
pyo3-build-config = "0.27"
