[build-system]
requires = ["maturin>=1.6.0,<1.7.0"]
build-backend = "maturin"

[project]
name = "biodivine_aeon"
description = "Python bindings for the tool AEON."
version = "1.0.0a8"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Repository = "https://github.com/sybila/biodivine-aeon-py/"
Documentation = "https://biodivine.fi.muni.cz/docs/aeon-py/latest/"