[package]
name = "biodivine-aeon-py"
version = "0.1.0"
edition = "2018"

[lib]
name = "biodivine_aeon"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
biodivine-lib-param-bn = "0.2.4"
biodivine-lib-bdd = "0.3.0"
biodivine-lib-bdd-py = { path = "../lib-bdd" }
biodivine-lib-param-bn-py = { path = "../lib-param-bn" }

[build-dependencies]
pyo3-build-config = "0.15.1"